--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 20rem;
   background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -10,17 +9,65 @@ body {
   position: relative;
 }
 
-.index-header {
-  background-image:
-    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
-    url("../img/ud.jpg");
+.hero-header {
   height: 100vh !important;
 }
 
-.about-header {
+.index-background {
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
-    url("../img/city.jpg");
+    url("../img/ud.jpg");
+  background-position: center;
+}
+
+.committees-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
+    url("../img/IMG_9527.jpg");
+  background-position: center 30%;
+}
+
+.about-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
+    url("../img/IMG_9252.jpg");
+  background-position: center 77%;
+}
+
+.in-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
+    url("../img/_DSC0712.jpg");
+  background-position: center;
+}
+
+.ud-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
+    url("../img/IMG_9300.jpg");
+  background-position: center 80%;
+}
+
+.ex-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
+    url("../img/DSC_8654.jpg");
+  /* background-position: center 35%; */
+  background-position: center 53%;
+}
+
+.careers-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
+    url("../img/ForFB.jpg");
+  background-position: center 45%;
+}
+
+.apply-background {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
+    url("../img/IMG_5088-2-2.jpg");
+  background-position: center 80%;
 }
 
 .header-spacer {
@@ -32,7 +79,7 @@ body {
   height: calc(20rem - 90px);
 }
 
-.index-header-content {
+.hero-header-content {
   width: 100%;
   height: calc(100vh - 65px - 3rem);
   /* full height - header height - chevron size - 1rem buffer */
@@ -48,7 +95,7 @@ body {
 
 @media (max-width: 575.98px) {
   nav.navbar {
-    background: #343a40;
+    background: var(--dark);
   }
 }
 
@@ -96,7 +143,7 @@ body {
   max-width: 150px;
 }
 
-@media (max-width: 575px) {
+@media (max-width: 575.98px) {
   .bio-img {
     max-width: 75px;
   }
@@ -115,17 +162,7 @@ h1.display-4 {
   width: 100%;
 }
 
-.timeline-date {
-  width: 60px;
-  height: 60px;
-  text-align: center;
-}
-
-.recruitment-event {
-  background-color: #818d99;
-}
-
-@media (max-width: 575px) {
+@media (max-width: 575.98px) {
   #title {
     font-size: 3.75rem;
   }
@@ -166,13 +203,14 @@ body main {
 
 .bio-card {
   box-shadow: 5px 10px 4px #888888;
-  perspective: 1000px;
+  border-width: thin !important;
   overflow: hidden;
-  transform-style: preserve-3d;
+  position: relative;
 }
 
 .bio-rect-img {
   /* padding: 15px 15px 0px 15px; */
+  display: block;
 }
 
 .invert-img {
@@ -184,14 +222,14 @@ body main {
   left: 0;
   right: 0;
   bottom: 0;
-  transform: translate3d(0, 100%, 0);
+  transform: translateY(100%);
   transition: all 0.3s ease;
-  background-color: #343a40;
+  background-color: var(--dark);
   /* margin: 0px 15px 0 15px; */
 }
 
 .caption:hover {
-  transform: translate3d(0, 0, 0);
+  transform: translateY(0);
 }
 
 .bio-visible {
@@ -199,7 +237,7 @@ body main {
   bottom: 100%;
   left: 0;
   right: 0;
-  background-color: #343a40;
+  background-color: var(--dark);
   overflow: visible;
 }
 
@@ -207,4 +245,94 @@ body main {
   /* display: none; */
   /* visibility: hidden; */
   overflow: hidden;
+}
+
+#carouselExampleControls > a.carousel-control-next {
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%);
+}
+
+#carouselExampleControls > a.carousel-control-prev {
+  background: rgb(0,0,0);
+  background: linear-gradient(90deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0) 100%);
+}
+
+#carouselExampleControls > a.carousel-control-next:focus, #carouselExampleControls > a.carousel-control-prev:focus {
+  opacity: 0.5 !important;
+}
+
+#carouselExampleControls > a.carousel-control-next:hover, #carouselExampleControls > a.carousel-control-prev:hover {
+  opacity: 0.9 !important;
+}
+
+.timeline {
+  position: relative;
+}
+
+@media (min-width: 576px) {
+  .timeline-event {
+    display: flex !important;
+  }
+  .timeline-date {
+    display: table-cell;
+    width: auto !important;
+  }
+  .timeline-description {
+    display: table-cell;
+  }
+}
+
+.timeline-event {
+  display: table-row;
+}
+
+.timeline-date {
+  vertical-align: top;
+  line-height: inherit;
+}
+
+.timeline-description {
+  vertical-align: top;
+}
+
+.timeline-marker {
+  display: table-cell;
+  vertical-align: top;
+  position: relative;
+  line-height: inherit;
+}
+
+/* bubbles */
+.timeline-marker::before {
+  /* border: 5px solid; */
+  height: 1rem;
+  width: 1rem;
+  top: 0.5rem;
+  left: 0;
+  right: 0;
+  margin: auto;
+  position: relative;
+  border-radius: 100%;
+  background: var(--dark);
+  content: "";
+  display: block;
+}
+
+/* vertical line */
+.timeline-marker::after {
+  background-color: var(--dark);
+  content: "";
+  width: 3px;
+  left: 0;
+  right: 0;
+  top: 2rem;
+  bottom: 0;
+  margin: auto;
+  position: absolute;
+}
+
+
+.timeline h1, .timeline h2, .timeline h3, .timeline h4, .timeline h5, .timeline h6 {
+  line-height: 2rem;
+
 }
