Replace committees photo

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,8 @@ body {
 .committees-background {
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
-    url("../img/IMG_9527.jpg");
-  background-position: center 30%;
+    url("../img/IMG_5392-2.jpg");
+  background-position: center 43%;
 }
 
 .about-background {
