--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+:root {
+  --dark: #212529;
+}
+
+
+.bg-dark, .btn-dark {
+  background-color: var(--dark) !important;
+}
+
 .header {
   width: 100%;
   height: 20rem;
