--- a/css/styles.css
+++ b/css/styles.css
@@ -362,5 +362,8 @@ body main {
 
 .timeline h1, .timeline h2, .timeline h3, .timeline h4, .timeline h5, .timeline h6 {
   line-height: 2rem;
+}
 
+.timeline a {
+  color: var(--dark);
 }
