--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body {
 .index-background {
   background-image:
     linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
-    url("../img/ud.jpg");
+    url("/img/ud.jpg");
   background-position: center;
 }
 
